replace getLast method to get(size-1)